--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  background-color: black;
+}
+
 .App {
   text-align: center;
 }
@@ -14,8 +18,19 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #26686D;
+  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-body {
   min-height: 100vh;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
