--- a/src/App.css
+++ b/src/App.css
@@ -54,35 +54,44 @@ a {
 }
 
 .RepoItemTop {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
   width: 100%;
-  height: 20vh;
+  height: 90%;
   overflow: hidden;
   text-overflow: ellipsis;
   background-color: #002D47;
+  transition: height 1s ease-in-out;
 }
 
 .RepoItemBottom {
   width: 100%;
-  height: 0%;
+  height: 10%;
   overflow: hidden;
   opacity: 0;
-  transition: all 0.5s ease-in-out;
+  transition: all 1s ease-in-out;
   user-select: none;
+  
+  background-size:cover;
+  box-shadow: inset 0em 0em 5em 1em black;
 }
 
 .RepoItemLeft {
+  width: 100%;
+  height: 35%;
   text-align: left;
   user-select: none;
 }
 
 .RepoItemRight {
-  text-align: right;
+  width: 100%;
+  height: 100%;
   user-select: none;
   overflow: hidden;
   word-wrap: break-word;
   overflow-wrap: break-word;
-  margin-left: 1em;
-  margin-right: 1em;
+  vertical-align: bottom;
   
   align-self: flex-end;
 }
@@ -91,13 +100,18 @@ a {
   text-align: left;
   text-overflow: ellipsis;
   
-  width: 100%;
-  height: 10vh;
+  width: calc(100%-1em);
+  margin: 0;
   padding: 1em;
+
+  font-size: 0.85em;
+
+  text-shadow: 0 0 5px black;
 }
 
 .RepoItemRight > p {
   margin-left: 25%;
+  margin-right: 1em;
   text-align: right;
   vertical-align: bottom;
 }
@@ -110,8 +124,4 @@ a {
   vertical-align: top;
 
   color: white;
-}
-
-.RepoItemLeft > img {
-  height: 10vh;
 }
