--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 html {
   background-color: #001825;
+  background-image: radial-gradient(#686868 1px, transparent 0);
+  background-size: 2em 2em;
+  background-attachment: fixed;
 }
 
 .App {
@@ -49,7 +52,8 @@ a {
 }
 
 .RepoItem:hover {
-  box-shadow: 0em 0em 3em -1em #26686D;
+  box-shadow: 0 0 0.4em 0 #26686D;
+  cursor: pointer;
 }
 
 .RepoItemWrapper {
